--- a/project/styles.css
+++ b/project/styles.css
@@ -47,8 +47,8 @@ body {
 }
 
 h2 {
-    color: #1D4ED8;
-    border-bottom: 2px solid #1D4ED8;
+    color: #000000;
+    border-bottom: 2px solid #000000;
     padding-bottom: 10px;
 }
 
@@ -57,7 +57,7 @@ h2 {
 }
 
 button {
-    background-color: #1D4ED8;
+    background-color: #000000;
     color: white;
     padding: 12px 25px;
     border: none;
@@ -68,7 +68,7 @@ button {
 }
 
 button:hover {
-    background-color: #1D4ED8;
+    background-color: #000000;
 }
 
 table {
@@ -97,7 +97,7 @@ tr:hover {
 
 a {
     text-decoration: none;
-    color: #1D4ED8;
+    color: #000000;
     font-weight: bold;
 }
 
