--- a/project/styles.css
+++ b/project/styles.css
@@ -71,19 +71,24 @@ h2 {
 
 .label-container {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; /* Zorg ervoor dat de labels op een nieuwe regel kunnen komen */
+    justify-content: space-between; 
+    flex-wrap: nowrap; 
     width: 100%;
+    gap: 100px; 
 }
 
 .label {
-    width: 30%; /* Zorg ervoor dat de labels goed passen */
-    margin-right: 10px;
-    white-space: nowrap; /* Voorkom dat tekst afgebroken wordt */
+    width: 45%; 
+    margin-bottom: 20px;
 }
 
 .label input[type="checkbox"] {
-    margin-right: 10px;
+    margin-right: 10px; 
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px; 
 }
 
 button[type="submit"] {
