--- a/project/student.css
+++ b/project/student.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: ''text-lg font-bold text-gray-800'';
   margin: 0;
   padding: 0;
   box-sizing: border-box;
