student.php klaar

--- a/project/student.css
+++ b/project/student.css
@@ -80,9 +80,10 @@ body {
   text-align: center;
   color: white;
   margin-left: 260px;
-  margin-top: -35px;
+  margin-top: -22px;
+  margin-bottom: 22px;
   background-color: #007bff;
-  padding: 4px;
+  padding: 3px;
   margin-right: 10px;
   width: 30px;
   height: 30px;
